# surfing-the-tide

./: .dockerignore  .envrc  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  deny.toml  docker-compose.yml  k6.js
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yaml
apps/: Cargo.toml  Dockerfile  build.rs
apps/src/: front-server.rs  server.rs  shared.rs
docker-compose/grafana/provisioning/dashboards/: dashboards.yml  home.json  latencies.json  p99.json
docker-compose/grafana/provisioning/datasources/: sources.yml
docker-compose/nginx/: nginx.conf
docker-compose/prometheus/: README.md  prometheus.yml
load-testing/: k6.js  k6.wrk2.sh  reports.md  wrk2.js  wrk2.sh
src/: front-server.rs  main.rs  server.rs  shared.rs
