[package]
name = "surfing-the-tide"
version = "0.1.0"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "front-server"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
http-client = "6.3"
http-types = "2.10"
isahc = { version = "0.9", default-features = false, features = ["http2"] }
kv-log-macro = "1.0"
opentelemetry = { version = "0.13", features = ["async-std", "rt-async-std"] }
opentelemetry-jaeger = { version = "0.12", features = ["async-std"] }
opentelemetry-semantic-conventions = "0.5"
opentelemetry-surf = { git = "https://github.com/asaaki/opentelemetry-surf", branch = "main", features = ["isahc-metrics"] }
opentelemetry-tide = { git = "https://github.com/asaaki/opentelemetry-tide", branch = "main" }
surf = { version = "2.2", features = ["curl-client"] }
tide = "0.16"
url = "2.2"
